# mdnotes

./: README.md  pyproject.toml  tox.ini
mdnotes/: __main__.py
mdnotes/commands/: init.py
