[tool.poetry]
name = "mdnotes"
version = "0.1.0"
description = "A static site generator to create clean personal (or team) notes"
authors = ["Meesha <44530786+meesha7@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^10.2.2"

[tool.poetry.dev-dependencies]
tox = "^3.23.1"
green = "^3.2.6"
pycodestyle = "^2.7.0"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
